# black-sheep

./: LICENSE  readme.md
source/: CMakeLists.txt  configuration.json  readme.md  template.json
source/doc/: command-line.md  compile.md  protocol-handout.txt  serial-bus-intelligent-servo.txt  sm30-default-values.md
source/scripts/: get-up-from-back.json  get-up-from-front.json  left-right-walk.json  right-left-walk.json  stand.json  zero.json
source/src/: log.hh  main.cc  main.hh  test.cc  test.hh  version.hh
source/src/behaviour/: behaviour.cc  behaviour.hh
source/src/behaviour/role/: defender.cc  defender.hh  fielder.cc  fielder.hh  keeper.cc  keeper.hh  role.hh  shared.cc  shared.hh  striker.cc  striker.hh
source/src/config/: config.cc  config.hh  json.hh
source/src/hardware/: hardware.cc  hardware.hh
source/src/hardware/motor/: fs6535m.cc  fs6535m.hh  mg995.cc  mg995.hh  motor.hh  sm30.cc  sm30.hh
source/src/localization/: localization.cc  localization.hh
source/src/motion/: motion.cc  motion.hh  scheduler.cc  scheduler.hh  walking.cc  walking.hh
source/src/network/: gamestate.cc  gamestate.hh  teamstate.cc  teamstate.hh
source/src/network/GameController/: .travis.yml  CHANGELOG.md  README.md  build.xml
source/src/network/mitecom/: Makefile  mitecom-data.h  mitecom-roledecider.cpp  mitecom-roledecider.h
source/src/utils/: clock.hh  math.hh  timing.cc  timing.hh
source/src/vision/: runner.hh  vision.cc  vision.hh
source/src/vision/ball/: ball.cc  ball.hh
source/src/vision/darknet/: CMakeLists.txt  DarknetConfig.cmake  DarknetConfigVersion.cmake  cmake_install.cmake
source/src/vision/integral/: integral.cc  integral.hh
source/src/vision/lut/: colour.hh  lut.cc  lut.hh
source/src/www/: webserver.cc  webserver.hh
source/src/www/EmbeddableWebServer/: EmbeddableWebServer.h
source/tools/: get_motor_id.sh  get_motor_table.sh  set_motor_baud.sh  set_motor_id.sh
source/www/: index.html
source/www/static/: debug.js  style.css
source/www/static/stl/: ankle-complete.scad.stl  ankle-left.scad.stl  ankle-right.scad.stl  armParts-left.scad.stl  armParts-right.scad.stl  battery-tray.scad.stl  battery.scad.stl  cageSide.scad.stl  camera-mount.scad.stl  camera-pcb.scad.stl  complete-arm-left.scad.stl  complete-arm-right.scad.stl  fan-mount.scad.stl  fan.scad.stl  foot-complete.scad.stl  foot-left.scad.stl  foot-right.scad.stl  head-bottom.scad.stl  head-complete.scad.stl  head-top.scad.stl  (+44 more)
(+305 files in other folders)
